# service-boilerplate

./: .gitignore  Makefile  config.py.example  conftest.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 001_init_ad4983d5d6ad.py
boilerplate-web-logs/: requests_log.txt
docker/: docker-compose.dev.yml
docker/nginx/: nginx.conf
docker/nginx/ssl/: cert.crt  key.key
docker/web/: Dockerfile
src/: app_globals.py
src/lib/: api_resource.py  models_scanner.py
src/modules/async_api_module/entrypoints/asgi/api/v1/: async_api.py
src/modules/async_api_module/mb_events/: events.py
src/modules/async_api_module/tests/end_to_end/api/v1/: test_async_api.py
src/modules/core/entrypoints/asgi/: asgi.py
src/modules/core/entrypoints/asgi/api/v1/: __init__.py  api_info.py
src/modules/core/entrypoints/asgi/middleware/: __init__.py  auth_middleware.py  database.py  encode.py  logging.py  message_bus.py
src/modules/core/entrypoints/wsgi/: wsgi.py
src/modules/core/entrypoints/wsgi/api/v1/: api_info.py
src/modules/core/entrypoints/wsgi/errors/: base.py
src/modules/core/entrypoints/wsgi/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  encode.py  logging.py  message_bus.py
src/modules/core/mb_events/: factory.py
src/modules/core/message_bus/: factory.py
src/modules/core/message_bus/events_handlers/: event_logger.py
src/modules/core/models/: event_log.py  exc.py  meta.py  outbox.py
src/modules/core/models/primitives/: events.py
src/modules/core/repositories/: events_log.py  outbox.py
src/modules/core/tests/helpers/: message_bus.py
src/modules/core/tests/integration/: test_outbox_processing.py
src/modules/sync_api_module/mb_events/: events.py
src/modules/sync_api_module/message_bus/: events.py
tests/helpers/: message_bus_test.py
(+4 files in other folders)
