[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = 'service-boilerplate'
version = "0.0.0"
requires-python = '>=3.8'
dependencies = [
    "redis_helper @ git+https://github.com/metallerok/redis-helper@v0.0.1",
    "falcon_cache @ git+https://github.com/metallerok/falcon-cache@v0.2.0",
    "message_bus @ git+https://github.com/metallerok/message_bus@v1.0.0",
    "venusian==3.1.0",
    "SQLAlchemy==2.0.29",
    "alembic==1.13.1",
    "falcon==3.1.3",
    "marshmallow==3.21.2",
    "redis==5.0.4",
    "gunicorn==22.0.0",
    "bcrypt==4.1.2",
    "PyJWT==2.8.0",
    "psycopg2==2.9.9",
]

[project.optional-dependencies]
dev = [
    "redis",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
